Bug 311753 - nepomuk cleaner crash
Summary: nepomuk cleaner crash
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Nepomuk Bugs Coordination
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-15 22:32 UTC by suse
Modified: 2012-12-18 17:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description suse 2012-12-15 22:32:11 UTC
nepomuk cleaner crashs after start.

Reproducible: Always

Steps to Reproduce:
1. deactivate nepomuk desktop search (necessary to reproduce the bug!)
2. start nepomuk cleaner
3. hit the start button 
4. crash after ~ 1sec.
(kde 4.10 beta2 from unstable opensuse repo.)



-- Backtrace:
Application: Nepomuk Cleaner (nepomukcleaner), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f7f20904780 (LWP 4991))]

Thread 2 (Thread 0x7f7f11931700 (LWP 4992)):
#0  0x00007fff0256860c in ?? ()
#1  0x00007fff0256889c in clock_gettime ()
#2  0x00007f7f19489f7d in clock_gettime () from /lib64/librt.so.1
#3  0x00007f7f1e52dd84 in do_gettime (frac=0x7f7f11930b68, sec=0x7f7f11930b60) at tools/qelapsedtimer_unix.cpp:123
#4  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#5  0x00007f7f1e602a3d in QTimerInfoList::updateCurrentTime (this=this@entry=0x7f7f0c002860) at kernel/qeventdispatcher_unix.cpp:354
#6  0x00007f7f1e602d83 in QTimerInfoList::timerWait (this=0x7f7f0c002860, tm=...) at kernel/qeventdispatcher_unix.cpp:461
#7  0x00007f7f1e6017fc in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f7f11930c5c) at kernel/qeventdispatcher_glib.cpp:136
#8  0x00007f7f1e6018a5 in timerSourcePrepare (source=<optimized out>, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#9  0x00007f7f1b299ebf in g_main_context_prepare () from /usr/lib64/libglib-2.0.so.0
#10 0x00007f7f1b29a5ab in ?? () from /usr/lib64/libglib-2.0.so.0
#11 0x00007f7f1b29a7a4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#12 0x00007f7f1e602136 in QEventDispatcherGlib::processEvents (this=0x7f7f0c0008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#13 0x00007f7f1e5d294f in QEventLoop::processEvents (this=this@entry=0x7f7f11930e00, flags=...) at kernel/qeventloop.cpp:149
#14 0x00007f7f1e5d2bd8 in QEventLoop::exec (this=0x7f7f11930e00, flags=...) at kernel/qeventloop.cpp:204
#15 0x00007f7f1e4d50b0 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#16 0x00007f7f1e4d808c in QThreadPrivate::start (arg=0x182e630) at thread/qthread_unix.cpp:338
#17 0x00007f7f1bcb9e0e in start_thread () from /lib64/libpthread.so.0
#18 0x00007f7f1de8e2cd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f7f20904780 (LWP 4991)):
[KCrash Handler]
#5  0x0000000000407c2b in startNextJob (this=0x18250a0) at /usr/src/debug/nepomuk-core-4.9.80_20121201/cleaner/jobmodel.cpp:125
#6  JobModel::startNextJob (this=0x18250a0) at /usr/src/debug/nepomuk-core-4.9.80_20121201/cleaner/jobmodel.cpp:106
#7  0x00007f7f1e5e85de in QObject::event (this=0x18250a0, e=<optimized out>) at kernel/qobject.cpp:1203
#8  0x00007f7f1efdc85c in QApplicationPrivate::notify_helper (this=this@entry=0x16d4190, receiver=receiver@entry=0x18250a0, e=e@entry=0x7f7f0c003080) at kernel/qapplication.cpp:4562
#9  0x00007f7f1efe0cda in QApplication::notify (this=0x7fff024fa190, receiver=0x18250a0, e=0x7f7f0c003080) at kernel/qapplication.cpp:4423
#10 0x00007f7f202f1806 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#11 0x00007f7f1e5d3bfe in QCoreApplication::notifyInternal (this=0x7fff024fa190, receiver=receiver@entry=0x18250a0, event=event@entry=0x7f7f0c003080) at kernel/qcoreapplication.cpp:946
#12 0x00007f7f1e5d7561 in sendEvent (event=0x7f7f0c003080, receiver=0x18250a0) at kernel/qcoreapplication.h:231
#13 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x169a2c0) at kernel/qcoreapplication.cpp:1570
#14 0x00007f7f1e601f83 in sendPostedEvents () at kernel/qcoreapplication.h:236
#15 postEventSourceDispatch (s=0x16c0580) at kernel/qeventdispatcher_glib.cpp:279
#16 0x00007f7f1b29a3b5 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#17 0x00007f7f1b29a6e8 in ?? () from /usr/lib64/libglib-2.0.so.0
#18 0x00007f7f1b29a7a4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#19 0x00007f7f1e602116 in QEventDispatcherGlib::processEvents (this=0x169f720, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#20 0x00007f7f1f07cbee in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#21 0x00007f7f1e5d294f in QEventLoop::processEvents (this=this@entry=0x7fff024fa060, flags=...) at kernel/qeventloop.cpp:149
#22 0x00007f7f1e5d2bd8 in QEventLoop::exec (this=0x7fff024fa060, flags=...) at kernel/qeventloop.cpp:204
#23 0x00007f7f1e5d7878 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#24 0x00000000004074a1 in main (argc=1, argv=0x7fff024fa308) at /usr/src/debug/nepomuk-core-4.9.80_20121201/cleaner/main.cpp:49
Comment 1 Simeon Bird 2012-12-18 17:15:17 UTC
Git commit 8a93fdafe99035e3a8c7cfaed9b73576152a3583 by Simeon Bird.
Committed on 18/12/2012 at 01:20.
Pushed by sbird into branch 'KDE/4.10'.

Fix crash when using nepomukcleaner with nepomuk disabled.
REVIEW: 107793
FIXED-IN: 4.10

M  +1    -1    cleaner/jobmodel.cpp
M  +1    -1    cleaner/mainwindow.cpp

http://commits.kde.org/nepomuk-core/8a93fdafe99035e3a8c7cfaed9b73576152a3583