Fix crash when using nepomukcleaner with nepomuk disabled.

BUG: 311753
REVIEW: 107793
FIXED-IN: 4.10